[package]
name = "intear-events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
inevents = { path = "../", optional = true }
dotenvy = "0.15.7"
log = "0.4.21"
simple_logger = "5.0.0"
inevents-redis = { path = "../redis" }
serde = "1.0.203"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
actix = "0.13.5"
inindexer = "0.2.0"
schemars = "0.8.21"
serde_json = "1.0.117"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
    "bigdecimal",
] }
semver = "1.0.23"
num-traits = "0.2.14"

[features]
impl = ["inevents"]
default = ["impl"] # If using this as a library, you may want to disable sqlx queries because of compile time checks
