[package]
name = "inevents-redis"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "streams", "connection-manager" ] }
anyhow = "1.0.86"
tokio = { version = "1.37.0" }
serde = "1.0.203"
serde_json = "1.0.117"
tokio-util = "0.7.11"
