[package]
name = "inevents-websocket-client"
version = "1.0.0"
edition = "2021"
description = "Event streaming client for Intear events API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/INTEARnear/inevents"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false }
json-filter = "0.1.1"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio = { version = "1.34", features = ["full", "test-util"] }
async-tungstenite = { version = "0.24", features = ["tokio-runtime"] }
tokio-test = "0.4"
test-log = "0.2"
env_logger = "0.10"
